added our projects section

--- a/index.html
+++ b/index.html
@@ -178,7 +178,30 @@
                 </div>
             </section>
         </div>
-        <div class="projects">Our Projects</div>
+        <div class="projects">
+            <h4 class="heading--4 projects--h4">Our Project</h4>
+            <h2 class="heading--2 projects--h2">
+                Why we are best
+            </h2>
+            <div class="projects__container">
+                <img src="./img/image.png" alt="projects" class="projects__img">
+                <div class="projects--1" onclick="changeImage(event,'./img/img1.jpg')">
+                    <h5 class="projects--h5">Genderless Kei – Japan’s Hot</h5>
+                    <p class="projects--detail">Set to launch on the manufacturer’s new A330neo aircraft in 2017, it’s
+                        offering lots of</p>
+                </div>
+                <div class="projects--2 projects--active" onclick="changeImage(event,'./img/image.png')">
+                    <h5 class="projects--h5">Better Strategy & Quality</h5>
+                    <p class="projects--detail">Set to launch on the manufacturer’s new A330neo aircraft in 2017, it’s
+                        offering lots of</p>
+                </div>
+                <div class="projects--3" onclick="changeImage(event,'./img/img2.jpg')">
+                    <h5 class="projects--h5">Genderless Kei – Japan’s Hot</h5>
+                    <p class="projects--detail">Set to launch on the manufacturer’s new A330neo aircraft in 2017, it’s
+                        offering lots of</p>
+                </div>
+            </div>
+        </div>
         <div class="growth__bgcolor"></div>
         <div class="growth">
             <div class="growth__content">
